# langgraph-multiagent-app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: .env.example  run_assistant.py
src/assistant/: config.py  main.py
src/assistant/chains/: decider.py
src/assistant/graph/: calendar_graph.py  calendario.py  calendario_graph.py  correo.py  correo_graph.py  decider.py  decider_graph.py  mail_graph.py  pregunta.py  pregunta_graph.py  question_graph.py  travel_graph.py  viaje.py  viaje_graph.py
src/assistant/namespace/: enum.py  model.py
src/assistant/prompts/: __init__.py  calendar_system.txt  calendario_system.txt  correo_system.txt  decider_human.txt  decider_system.txt  format_answer_human.txt  mail_system.txt  pregunta_system.txt  question_system.txt  travel_system.txt  viaje_human.txt  viaje_system.txt
src/assistant/prompts/en-GB/: calendar_system.txt  decider_human.txt  decider_system.txt  format_answer_human.txt  mail_system.txt  question_system.txt  task_human.txt  travel_system.txt
src/assistant/prompts/es-ES/: decider_human.txt  decider_system.txt  format_answer_human.txt  mail_system.txt  question_system.txt  task_human.txt  travel_system.txt
src/assistant/tools/: calendar.py  calendario.py  correo.py  decider.py  format_answer.py  mail.py  pregunta.py  question.py  travel.py  viaje.py
src/assistant/utils/: speech_to_text.py  text_to_speech.py
src/front/: main.py
